fixed footer alignment

--- a/views/stylesheets/partials/_footer.sass
+++ b/views/stylesheets/partials/_footer.sass
@@ -16,4 +16,6 @@
     font-size: 25px
   .contact
     display: none
-  
+
+.row.footer
+  margin: 0
