--- a/views/stylesheets/partials/_product.sass
+++ b/views/stylesheets/partials/_product.sass
@@ -11,7 +11,7 @@ button
   color: white
   font-size: 12px
   text-transform: uppercase
-  padding: 13px 30px
+  padding: 11px 30px
   border: none
   letter-spacing: 2px
   &:hover
@@ -38,18 +38,12 @@ img.thumbnail.soldout
   font-size: 30px
   font-color: gray
 
-.arrow 
-  display: inline-block
-  position: absolute
-  color: rgba(180, 180, 180, 0.67)
-
-.arrow.left
-  margin-top: 25%
-  margin-left: -28%
-
-.arrow.right
-  margin-top: -18%
-  margin-left: 25%
+// .row
+//   .arrow.left 
+//     position: absolute
+//     font-size: 50px
+//     color: rgba(180, 180, 180, 0.67)
+//     margin-top: -290px
 
 .row.buy
   margin: 10px
