--- a/views/stylesheets/partials/_type.sass
+++ b/views/stylesheets/partials/_type.sass
@@ -20,12 +20,12 @@ button,
 .title
   text-align: center
   text-decoration: none
-  font-size: 55px
+  font-size: 47px
   text-transform: uppercase
   color: #535353
   font-family: avenir
-  letter-spacing: 1px
-  margin-top: 50px
+  letter-spacing: 2px
+  margin-top: 47px
   font-weight: 600
   line-height: 55px
   text-shadow: 0 -1px 0 #2C2C2C
@@ -94,18 +94,10 @@ h8
 p
   text-align: justify
   font-size: 13px
-  // font-family: adobe caslon pro, georgia, serif
   font-weight: 100
   letter-spacing: .5px
-  color: rgb(83, 83, 83)
+  color: #222222
   line-height: 1.8em
-  &.description
-    font-size: 13px
-    // font-family: adobe caslon pro, georgia, serif
-    font-weight: 100
-    letter-spacing: .5px
-    color: rgb(83, 83, 83)
-
 a
   color: gray
   &:hover
@@ -113,8 +105,18 @@ a
     color: gray
 
 .contact a 
-  font-size: 20px
-  line-height: 25px
+  color: rgb(162, 162, 162)
+  font-family: avenir
+  font-weight: 600
+  letter-spacing: 1px
+  font-size: 11px
+  text-transform: uppercase
+  line-height: 0.5em
+  text-align: left
+
+.contact
+  .col-sm-6
+    text-align: left
 
 .nav
   a
@@ -128,4 +130,4 @@ a
     +transition(opacity 2s linear)
     &:hover
       color: gray
-      border-bottom: 1px solid $gray-light
+      border-bottom: 3px solid rgba(231, 231, 231, 1)
